--- a/ch_descriptions_risk.tex
+++ b/ch_descriptions_risk.tex
@@ -10,16 +10,17 @@
 \chapter{Data Description and Risk Maps}\label{ch:descr-risk}
 
 This chapter will give a technical explanation of what raw Call Detail Records (CDR) are and how they will be used throughout this work.
-The preprocessing and manipulation of the data will be explained in depth, with all the details necessary to build the epidemic risk maps that are presented in this section.
+The preprocessing and manipulation of the data will be explained in depth, with all the details necessary to build the epidemic risk maps that are presented in this chapter.
 All necessary vocabulary and definitions will be introduced, along with the ideas used to build the user-level covariates from the CDRs.
-Finally, some descriptive facts on both datasets will be given, concerning data size, volume of transactions, feature correlations and a comparison of  TelCo user distribution with national population distributions.
+Finally, some descriptive facts on both datasets will be given, concerning data size, volume of transactions, feature correlations and a comparison of tele-communication (TelCo) user distribution with national population distributions.
 
 
 \section{Mobile Phone Data Sources}
 
 Our data source is anonymized traffic information from two mobile operators, in Argentina and Mexico.
 Both companies service phone calls at the national level and to a number of customers that amounts to a user base that sizes in the order of millions.
-With these we are provided with two different CDR datasets.
+All of this information is contained in two different CDR datsets.
+% With these we are provided with two different CDR datasets.
 
 For our purposes, each record is represented as a tuple $\left < i, j, t, d, l \right >$, where user $i$ is the caller, user $j$ is the callee, $t$ is the date and time of the call, $d$ is the call direction (incoming or outgoing, with respect to the mobile operator client), and $l$ is the location of the tower that routed the communication.
 
@@ -27,7 +28,7 @@ The dataset does not include personal information from the users, such as name, 
 The users privacy is assured by differentiating users by their salted and hashed ID, where encryption keys were managed exclusively by the telephone company.
 
 All of the data was preprocessed excluding users whose monthly cellphone use either did not surpass a minimal number of calls $\mu$ or exceeded a maximal number $M$.
-This ensures we leave out outlying users such as call-centers or dead phones and forboth datasets, we used $\mu = 5$ and $M = 400$.
+This ensures we leave out outlying users such as call-centers or dead phones and, for both datasets, we used $\mu = 5$ and $M = 400$.
 
 We then aggregate the call records for a five month period into an edge list $(n_i, n_j, w_{i,j})$ where nodes $n_i$ and $n_j$
 represent users $i$ and $j$ respectively and $w_{i,j}$ is a boolean value indicating whether these two users have communicated at least once within the five month period.
@@ -57,46 +58,48 @@ Information logged for each call included other aspects of the interaction.
 We had data for the duration and timestamp of the call, the users participating in the call and the antenna id that transmitted the call to the \emph{TelCo} client.
 
 Adding all data elements, the project involved working with more than 1.5 terabytes of data.
-The data was compressed using \emph{gzip}\footnote{For more information on this file format, please refer to Wikipedia's article on this subject: \url{https://en.wikipedia.org/wiki/Gzip}} format.
-The call logs, in this data format, were parsed, processed, transformed and loaded to create the datasets which were bult as needed by this project.
+The data was compressed using \emph{gzip} format.
+The call logs, in this data format, were parsed, processed, transformed and loaded to create the datasets which were built as needed by this project.
 
 \paragraph{Data Limitations.}
-Although a lot of information is available in the CDR datasets, there may be limitations in their representations of the whole population.
-In each case, data is sourced from a single mobile phone operator, and no information is given on the distribution of its users, thus calls might in principle not represent correctly social interactions and movements between two given jurisdictions.
-Also important, we note that not all user movements will be captured by the log records.
-However, these limitations are offset by the huge datasets' sizes, from which we think we can safely assume that the amount of users observed in each set is sufficient to correlate real mobility or social links between different areas.
+Although a lot of information is available in the CDR datasets, there may be limitations in their representations of the whole national population.
+In both cases, the data sources from a single mobile phone operator, and no information is given on the spatial distribution of its users, relative to the national average.
+In principle, we do not know if TelCo's users are over- and under-represented across national jurisdictions, in comprison to the nation's national population distribution.
+Therefore, calls might not accurately represent social interactions and movements between two given jurisdictions, given that we are provided with a biased sample of users.
+
+The same argument can be used to note that not all \textit{real} population movements will be captured by the logs.
+However, these limitations are offset by the huge datasets' sizes, from which we think we can safely assume that the amount of users observed in each set is sufficient to correlate CDR usage with human mobility or social links between different areas.
 
 \section{ Risk Maps Generation}\label{section:risk_maps}
 
-In this section we describe how the Chagas disease risk maps were built for the in Argentina and Mexico, and we give an overview of their uses.
-As an overview, the risk maps hypothesize on the possibility of locating specific communities of higher disease prevalence outside of the endemic regions.
+In this section we describe how the Chagas disease risk maps were built for Argentina and Mexico, and we give an overview of their uses.
+As an overview, we use the risk maps to hypothesize on the possibility of locating specific communities of higher disease prevalence outside of the endemic regions.
 They are based on the assumption that when we have stronger communication ties from one community to the endemic region, we will find a higher chance of disease risk.
 Earlier versions of this project were presented by \citep{sarraute2015descubriendo} at \emph{Simposio Internacional sobre Enfermedades Desatendidas}, and\citep{deMonasterio2016analyzing} at \emph{International Conference on Advances in Social Networks Analysis and Mining}.
 These were based on the results contained in this chapter.
 
 The generated heatmaps display a geographical representation with the TelCo's antennas situated on the map.
-And for each antenna, a circle is drawn which represents, graphically, the volume of usage of that antenna and the vulnerability of its users.
+For each antenna, a circle is drawn which represents, graphically, the volume of usage of that antenna and the vulnerability of its users.
 We will expand on this last concept later by analyzing the importance of this variable in the detection of long-term migrations.
 
 \subsection{Home Detection}\label{subsection:home_detection}
 
 In order to build the risk maps, the first step is to infer the antenna in which each user lives.
-The antenna's neighborhood will define his home area of influence and with this, his risk condition associated with being inside or outside the endemic region.
+The antenna's neighborhood will define their home area of influence and with this, their risk condition associated with being inside or outside the endemic region.
 
-Having the geolocalized data granular at the antenna level, we can match each user $u \in \calN_C$ with its \textit{home antenna} $H_u$.
+Having the geolocalized data granular at the antenna level, we can match each user $u \in \calN_C$ with their \textit{home antenna} $H_u$.
 To do so, we assume $H_u$ as the antenna in which user $u$ spends most of the time during weekday nights.
 This, according to our categorization of weekday's types, corresponds to Monday through Thursday nights, from 8pm to 6am of the following day.
 Note that this home antenna analysis will not precisely locate users yet it will define their area of influence.
 This will enable us later to detect long range migrations by looking at changes in these home antennas.
 
 This \textit{home} characterization is based on the assumption that on any given day, users will be located at home during night time.
-The implications of this assumption for CDRs are explored by\citep{sarraute2015socialevents} and by\citep{csaji2012exploring}.
+The implications of this assumption for CDRs are explored by \citep{sarraute2015socialevents} and by\citep{csaji2012exploring}.
 There, the authors explain that given the large user base, this assumption proves helpful when trying to predict migration patterns at large scale.
 For our case we need not detect specific agent movements but are more interested in movement of large amount of people.
 
-Given a user's $H_u$, he will be considered endemic if his inferred home antenna is located in the endemic zone $E_Z$.
+Given a user's $H_u$,they will be considered endemic if their inferred home antenna is located in the endemic zone $E_Z$.
 These tagged users are considered to be the set of \textit{residents of $E_Z$}.
-
 In the case of Argentina, the risk area is the \textit{Gran Chaco} ecoregion, as described in \cref{endemic_zone_argentina};
 whereas in the case of Mexico, we used the region described in \cref{endemic_zone_mexico}.
 
@@ -105,14 +108,14 @@ whereas in the case of Mexico, we used the region described in \cref{endemic_zon
 
 Given the set of inhabitants of the risk area, we want to find those with a high communication pattern with residents of the endemic zone $E_Z$.
 To do this, we get the list of calls for each user and then determine the set of their neighbors in the social graph $\calG_C$.
-For each resident of the endemic zone, we tag all his graph neighbors as potentially vulnerable.
-We also tag the calls to (from) a certain antenna from (to) residents of the endemic area $E_Z$ as \textit{vulnerable calls}.
+For each resident of the endemic zone, we tag all their graph neighbors as potentially vulnerable.
+We also tag the calls to (from) a certain antenna, or \textit{cell}, from (to) residents of the endemic area $E_Z$ as \textit{vulnerable calls}.
 With our definition, a user with at least one call from (to) the endemic area is enough to qualify as vulnerable.
 
 The next step is to aggregate this data for every antenna.
 Given an antenna $a$, we will have:
 \begin{itemize}
-	\item The total number of residents $N_a$ (this is, the number of people for which that is their home antenna).
+	\item The total number of residents $N_a$ (this is, the number of people for which $a$ is their home antenna).
 	\item The total number of residents which are vulnerable $V_a$.
 	\item The total volume of outgoing calls $C_a$ from every antenna.
 	\item From the outgoing calls, we extracted every call that had a user whose home is in the endemic area $E_Z$ as a receiver $VC_a$ (\textit{vulnerable calls}).
@@ -121,7 +124,7 @@ Given an antenna $a$, we will have:
 These four numbers $\left< N_a, V_a, C_a, VC_a \right>$ are the properties we extracted for each antenna in the studied countries.
 
 \subsection{Heatmap Generation}
-With the collected antenna properties, we generated heatmaps to visualize the mentioned antenna indicators, overlapping these heatmaps with political maps of the region taken for study.
+With the collected antenna properties, we generated heatmaps to visualize the mentioned antenna indicators, overlayed with political maps of the corresponding region.
 In them, a circle is generated for each cell, where:
 
 \begin{itemize}
@@ -138,12 +141,12 @@ We used two filtering parameters to control which antennas are plotted.
 \end{itemize}
 
 When displaying the maps, these parameters were helpful to identify special small antenna's circles which were covered under the circles of larger volume antennas.
-Having more than four thousand antennas for each plot means that a high number of these would graphically overlap those small neighboring ones.
-This \textit{noise} is unhelpful to the detection of smaller, more vulnerable, antennas.
+Having more than four thousand antennas for each plot means that a high number of these would graphically overlap with small neighboring ones.
+This \textit{noise} is unhelpful for the detection of smaller, more vulnerable, antennas.
 
 These parameters were tuned differently when zooming into different regions.
 For example: an antenna whose vulnerable percentage would be considered low at the national level can be locally high when zooming in at a more local level.
-The filtering parameters helped us explore these cases with more detail, and provided great insight to the Mundo Sano Foundation.
+The filtering parameters helped us explore these cases in more detail, and provided great insight to the Mundo Sano Foundation.
 The following section presents these maps.
 
 \section{Risk Maps Visualizations}\label{section:riskmaps}
@@ -152,7 +155,7 @@ The following section presents these maps.
 
 
 \begin{figure}[ht]
-	\caption{Risk map for Argentina, filtered according to the value of $\beta$.}\label{fig:mapa_argentina}
+	\caption{Risk maps for Argentina, filtered according to the value of $\beta$.}\label{fig:mapa_argentina}
 	\begin{minipage}{.495\linewidth}
 		\centering
 		\includegraphics[width=0.90\linewidth]
@@ -198,8 +201,9 @@ In some cases, antennas stood out for having a significantly higher link to the 
 Our objective here was to enhance the visualization in areas outside of Gran Chaco looking for possible host communities of migrants from the ecoregion, inferred by the social links shown in the CDRs.
 Our assumptions were that if, in average, there was a higher percentage of vulnerable users in that non-epidemic antenna, this would mean that there's a high possibility of having more infected users in that community.
 
-As a result of this visualization, high risk antennas were separately listed and manually located in political maps.
-This information was made available to the \textit{Mundo Sano} Foundation collaborators who used it as an aid for their campaign planning and as education for community health workers.
+As an outcome of analyzing these visualizations, we were able to locate special antennas which stand out over their neighbouring ones.
+These high risk antennas were then located and separated for manual inspection along with the \textit{Mundo Sano} Foundation collaborators.
+They used this information it as an aid for their campaign planning and as education for community health workers.
 
 %\todo{preguntarle a Diego si hubo algun avance/resultado sobre esto.}
 
@@ -260,7 +264,7 @@ For space reasons, we don't provide here more specific visualizations and analys
 % \newpage
 
 
-\section{Features from the Data}
+\section{Data Features}
 
 The quality of any machine learning task on CDRs relies heavily on the ability to characterize the users and their communication patterns, in ways that are as relevant as possible to the task.
 In general, the features constructed reflect calling and mobility patterns, segmented by different time periods during the week, and tagging whether the actions or subjects are `endemic'.
@@ -268,10 +272,9 @@ In general, the features constructed reflect calling and mobility patterns, segm
 Our goal in building a machine learning model is to evaluate and analyze if long-term migrations can be accurately predicted from the CDR data.
 Added to this, we would like to know what type of information extracted from the data has most predictive power to our problem's variable.
 This result would tell us which data features are informative in detecting migrations, which in turn, would test the assumption on which we build the risk maps in \cref{section:riskmaps}.
-
 The CDR logs available for Argentina span a period of 5 months, whereas the Mexican dataset includes 24 months, from January 2014 to December 2015, making it more suitable for this study.
 
-To start, we divide the available data into two distinct periods:
+To begin with, we divide the available data into two distinct periods:
 $T_0$, from January 2014 to July 2015, considered as the ``past'' in our experiment; and $T_1$, from August 2015 to December 2015, considered as the ``present''.
 Our dataset will only run from August 2015 to December 2015 (period $T_1$), where all CDRs are processed to extract information by user and by link.
 This is done because we can't introduce data from $T_0$ for a model trying to predict this same information.
@@ -285,41 +288,32 @@ To start off building attributes from the data, each week is divided into time p
 The model consists of the following features, which can be grouped into 4 categories:
 % The data is aggregated by user and by link.0
 
-\subsection{Used and Home Antennas}\label{homeantenna}
-
-For each user $u \in \calN_C$, we register the top ten most used antennas, during each month of the training period,
+\begin{enumerate*}[label={\alph*)},]
+\item \textbf{Used and Home Antennas:} For each user $u \in \calN_C$, we register the top ten most used antennas, during each month of the training period,
 together with the number of calls made through each antenna.
 We tag all users having their home antenna in the epidemic region as \textit{EPIDEMIC}.
-
 In our dataset user antennas are ordered with $0$ being the most used antenna and $9$ the least.
-We fill with null values for those users for which we don't have ten used antennas and discard users that have no calls on weeknights\footnote{This is because we wouldn't be able to detect $H1_u$.}.
+We ignore those users for which we don't have ten used antennas and discard users that have no calls on weeknights\footnote{This is because we wouldn't be able to detect $H1_u$.}.
 We also register the most used antennas considering only calls made during the \textit{weeknight} period, as defined in \cref{def:week-periods}.
-% that is from Monday to Friday excluding the working hours (from 8hs to 20hs)\label{WEEKNIGHT}.
-% Log counts as well.
+As explained before, a user's home antenna is defined by the most used antenna during weeknights and, with this, users were tagged as `endemic' if their home antenna is in the endemic zone $E_Z$ and `exposed' if any of the ten antennas logged is in the risk area.
+% For our algorithms we considered two versions for this antenna: the most used antenna in all of $T_0$, and the most used antenna during the \textit{week night} for these same months.
 
-As explained before, a user's home antenna is defined by the most used antenna during weeknights.
-For our algorithms we considered two versions of te home antenna: the most used antenna in all of $T_0$., and the most used antenna during the \textit{week night} for these same months.
-With this, users were tagged as `endemic' if their home antenna is in the endemic zone $E_Z$ and `exposed' if any of the ten antennas logged is in the risk area.
-Finally, we added the user's province by referring to his home antenna's pertenence.
-
-
-\subsection{Mobility Diameter}\label{section:def_mobility_diameter}
-
-The user's logged antennas define a convex hull in space and the radius of this hull is taken to be the user's mobility diameter.
+Finally, we added the user's province by referring to their home antenna's pertenence.
+\item \textbf{Mobility Diameter:} The user's logged antennas define a convex hull in space and the radius of this hull is taken to be the user's mobility diameter.
 This length is representative of the area of influence of that individual.
 We expect this feature to be correlated with long-term migrations.
-
-We proceeded to register the mobility diameter of each user, as the diameter in kilometers of the convex hull defined by his top 10 used antennas.
+We registered the mobility diameter of each user, as the diameter in kilometers of the convex hull defined by their top 10 used antennas.
 Again, we generate two values for this attribute, considering (i) all antennas used and (ii) only those used during \textit{weeknights}.
-
-\subsection{Graph Data and Communications}\label{section:def_graph_data}
-
-We look at the social graph $\calG_C$ built from the CDRs, and the communications between nodes in $\calN_C$.
-
+\item \textbf{Graph Data and Communications:} We look at the social graph $\calG_C$ built from the CDRs, and the communications between nodes in $\calN_C$.
 For each edge $\left< n_i, n_j \right> \in \calE_C$, we dive into each of their interactions, segmenting call data with different criteria.
 For each month and pair of users $\left< i,j \right>$, we gather the tuple $\left< time_{ij}, calls_{ij}, direction, period \right>$ where $time$ is the sum of all calls (in seconds), $calls$ is the number of calls exchanged, $direction$ is a boolean variable indicating whether the calls were incoming or outgoing (from user $i$'s point of view) and $period$ corresponds to a segmentation of the week into the periods \textit{weekday}, \textit{weeknight}, and \textit{weekend}.
-
 In this sense, two users $u_i, u_j \in \calN_C, u_i \neq uj$ are \textbf{neighbors} in the social graph if $time_{ij} > 0$.
+\end{enumerate*}
+
+% \subsection{}\label{homeantenna}
+% \subsection{}\label{section:def_mobility_diameter}
+% \subsection{}\label{section:def_graph_data}
+
 
 %\begin{description}
 %     \item [Neighbors.] From the social graph built from the CDRs we extracted the total count of neighbors in the communication graph and the total count of epidemic neighbors.
@@ -328,7 +322,7 @@ In this sense, two users $u_i, u_j \in \calN_C, u_i \neq uj$ are \textbf{neighbo
 
 %if we find that user $j$ is epidemic.This may be translated as the edge is vulnerable if one of both users is epidemic.
 
-Since the samples in our dataset are users, we have to aggregate all these variables, by grouping interactions at the user level.
+Since the samples in our dataset are users, we have to aggregate all of these variables, by grouping interactions at the user level.
 Combinations of all of these different variables amount to more than 150 features per user.
 
 To illustrate the point, we show a small example of how two calling features could look like.
@@ -364,18 +358,16 @@ Finally we aggregate all these variables up to a user's level, summing over all 
 In practice, this means grouping either by $j$ or $i$, and summing across all of the different components shown above.
 
 We also label each edge $\left< n_i, n_j \right> \in \calE_C$ if one or both users is endemic and count each user's amount of neighbors in the communication graph, as well as the endemic neighbors.
-This labeling defines user $i$ as \textit{vulnerable} whenever he has any edge with another user $j$ who lives in the endemic region $E_Z$.
+This labeling defines user $i$ as \textit{vulnerable} whenever they have any edge with another user $j$ who lives in the endemic region $E_Z$.
 
 
 \subsection{Antenna Distribution}\label{subsection:antenna_distribution}
 
-As explained before, the training data belongs to period $T_1$, from August 2015 to December 2015;
+As described before, the training data belongs to period $T_1$, from August 2015 to December 2015;
 whereas the ground truth that we use to validate the predictions belongs to $T_0$, from January 2014 to August 2015.
 Raw data logs contain between 11 million and 30 million calls per day and the volume of calls increases over the months, where most recent months have higher rates.
-
 After preprocessing and cleaning the dataset, we obtained a dataset with 1.6 million users.
-
-To create our model's input data, by means of relational database operations and algorithms that scrap the whole dataset, we transform raw CDRs into a dataset who's sample corresponds to a single user.
+To create our model's input data, by means of relational database operations and algorithms that scrap the whole dataset, we transform raw CDRs into a dataset where indviduals correspond to a single rows in the dataset.
 
 To compare how this sampled population compares to country-wide distribution estimates,
 \cref{tab:distribution_by_state} shows the percentage of antennas, the population (according to INEGI census 2014) and
@@ -451,16 +443,15 @@ This is not surprising given that we wouldn't expect a large number of people mi
 
 The dataset used in this work shows significant correlations between communication and mobility patterns.
 Some features are essentially highly correlated across time periods.
-Thus knowing a user's current endemicity will be highly correlated to his past endemicity since a user being endemic in $T_1$ is very correlated to being endemic in $T_0$.
-The same property extends to attributes of user's interaction with vulnerable neighbors during $T_1$, where their relationship to the user's endemicity in $T_0$ is expected
-
-In these cases, it is important to know the value of this correlation to the past endemicity.
+Thus knowing a user's current endemicity will be highly correlated to their past endemicity since a user being endemic in $T_1$ is very correlated to being endemic in $T_0$.
+The same property extends to attributes of user's interaction with vulnerable neighbors during $T_1$, where their relationship to the user's endemicity in $T_0$ is expected.
+In these cases, it is important to know the value of their correlation to the past endemicity of the user.
 In \cref{ch:ensembleMethods}, we will leverage this observation to improve our performance in predicting long-term migrations.
 
 \cref{tab:featureCorrelations} quantifies these relationships, where only features with an absolute correlation value higher than $0.25$ are shown.
 It is notable that the correlation is slightly increasing as we get closer to the split month i.e.\ the month chosen to separate $T_0$ from $T_1$.
-This behavior might be an indicator of seasonality in the data, where events from $T_1$more closer to $T_0$ carry more intrinsic value.
-Added to this, there is a very small indication that a user's calling volume in the month of December is more related to a user's past endemicity in the sense that it carries a higher correlation with his past endemicity.
+This behavior might be an indicator of seasonality in the data, where events from $T_1$ more closer to $T_0$ carry more intrinsic value.
+Added to this, there is a very small indication that a user's calling volume in the month of December is more related to a user's past endemicity in the sense that it carries a higher correlation with their past endemicity.
 Again, this suggests data seasonality in the data, where December is a festive month by tradition in Latin America.
 
 
