--- a/ch_introduction.tex
+++ b/ch_introduction.tex
@@ -22,7 +22,7 @@ Long-term human mobility, particularly seasonal and permanent rural-urban migrat
 Other relevant routes of transmission include blood transfusion, congenital contagion --with an estimated 14,000 newborns infected each year in the Americas~\citep{OPS2006chagas}--, organ transplants, accidental ingestion of food contaminated by \textit{Trypanosoma cruzi}, and laboratory accidents.
 
 The spatial dissemination of a congenitally transmitted disease sidesteps the available measures to control risk groups, and shows that individuals who have not been exposed to the disease vector should also be included in detection campaigns.
-To the best of our knowledge, current studies on human migration patterns in Latin America can provide only coarse and outdated information on user flows at specific municipal levels, without national terriotry coverage.
+To the best of our knowledge, current studies on human migration patterns in Latin America can provide only coarse and outdated information on user flows at specific municipal levels, without national territory coverage.
 
 In this work, we discuss and explore the use of mobile phone records --also known as Call Detail Records (CDRs)-- for the analysis of mobility patterns and the detection of possible risk zones of Chagas disease in two Latin American countries.
 We rely on key health expertise on the subject, provided by the \textit{Mundo Sano} Foundation.
@@ -33,7 +33,7 @@ We will also give a very brief overview of the field of \textit{Machine Learning
 
 \section{Mobile Phone Records, Mobility and Epidemiology}
 
-The scientific analysis of mobile phone datasets, collected by operators within their network, is a recent field of study, with a corpus of published works starting in 2005, and a noticeable increase of publications from 2012 onwards, as reported in the survey of \citep{naboulsi2015mobile}.
+The scientific analysis of mobile phone datasets, collected by operators within their network, is a recent field of study, with a corpus of published works starting in 2005, and a noticeable increase of publications from 2012 onward, as reported in the survey of \citep{naboulsi2015mobile}.
 Other milestones of this increased interest of the scientific community are the NetMob conferences, focused on mobile phone data analysis (see \citep{netmob}).
 
 Mobile traffic contains information about the movement, interactions, and mobile service consumption of individuals at unprecedented scales.
@@ -41,7 +41,7 @@ This attracted scientists from multiple disciplines:
 sociologists, epidemiologists, physicists, transportation and telecommunication experts found in these datasets a clear opportunity to bring their analyses to an unprecedented scale while retaining a high level of detail on each individual.
 Thanks to the growing availability of datasets, collaborations between academic research groups and network operators based on the analysis of real-world mobile traffic have been flourishing.
 A significant example is the Data for Development Challenges by Orange \citep{d4d} in which CDRs from the telecommunication operator was provided.
-This let let international research laboratories compete under an innovation challenge whose objective is to contribute to social welafare.
+This let let international research laboratories compete under an innovation challenge whose objective is to contribute to social welfare.
 
 In CDR analysis one of the main research subjects is mobility analysis, where calls can be located by means of knowing cellphone tower geolocalization and by then matching calls to one of these points.
 This provides fine granularity projections of users trajectories and in this way users have been found to show a strong regularity in their movement patterns, both in space and time, as described in \citep{gonzalez2008understanding}.
@@ -73,7 +73,7 @@ We have no reason to believe that this dataset can provide such information with
 
 \section{Machine Learning}
 
-Machine learning is a subfield of computer science with broad \textit{theoretical} intersections with statistics and mathematical optimization.
+Machine learning is a sub-field of computer science with broad \textit{theoretical} intersections with statistics and mathematical optimization.
 At present time, it has a wide range of applications.
 A non-comprehensive list of its uses includes self-driving cars, Spam detection systems, face and voice recognition, temperature prediction in weather, AI opponents in games, disease detection in patients, text and audio language translation, stock pricing, movie recommendation systems, etc.
 Examples of these machine learning programs are now widespread to the point where their use today has a direct impact on the daily lives of millions of people.
@@ -107,7 +107,7 @@ To the best of our knowledge, this is the first work that leverages mobile phone
 
 For more than 50 years, vector control campaigns have been underway in Argentina as the main epidemic counter-measure.
 The \textit{Gran Chaco}, situated in the northern part of the country is home to the disease-carrying triatomines.
-This region is hyperendemic for the disease~\citep{OPS2014mapa}.
+This region is hyper-endemic for the disease~\citep{OPS2014mapa}.
 A map of this ecoregion is shown in \cref{fig:granchaco}.
 
 \begin{figure}[ht]
